--- a/index.html
+++ b/index.html
@@ -13,44 +13,44 @@
         <div class="container">
 
             <div class="tela">
-                <textarea name="" id="" cols="30" rows="10" class="txt_area"></textarea>
+                <input type="text" id="input">
             </div>
 
-            <div class="numeros">
+            <div class="btns">
 
                 <div class="linha">
-                    <button onclick="click()">C</button>
-                    <button>()</button>
-                    <button>%</button>
-                    <button>/</button>
+                    <span onclick="clear()">C</span>
+                    <span>()</span>
+                    <span>%</span>
+                    <span>/</span>
                 </div>
 
                 <div class="linha">
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                    <button>X</button>
+                    <span onclick="insert('7')">7</span>
+                    <span onclick="insert('8')">8</span>
+                    <span onclick="insert('9')">9</span>
+                    <span>X</span>
                 </div>
 
                 <div class="linha">
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button>-</button>
+                    <span onclick="insert('4')">4</span>
+                    <span onclick="insert('5')">5</span>
+                    <span onclick="insert('6')">6</span>
+                    <span>-</span>
                 </div>
 
                 <div class="linha">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button>+</button>
+                    <span onclick="insert('1')">1</span>
+                    <span onclick="insert('2')">2</span>
+                    <span onclick="insert('3')">3</span>
+                    <span>+</span>
                 </div>
 
                 <div class="linha">
-                    <button>cor</button>
-                    <button>0</button>
-                    <button>,</button>
-                    <button>=</button>
+                    <span>cor</span>
+                    <span onclick="insert('0')">0</span>
+                    <span>,</span>
+                    <span>=</span>
                 </div>
 
             </div>
